[tool.poetry]
name = "types-wxpython"
version = "0.7.0"
description = "Typing stubs for wxPython"
authors = ["Alexion Software <info@alexion.nl>"]
homepage = "https://github.com/AlexionSoftware/types-wxpython"
repository = "https://github.com/AlexionSoftware/types-wxpython"
keywords = ["wxPython", "typing", "stubs", "wx"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "wx-stubs" },
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
requests = "^2.28.2"
bs4 = "^0.0.1"
isort = "^5.12.0"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.14"
types-beautifulsoup4 = "^4.11.6.7"
flake8 = "^6.0.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
use_tabs = false
indent_width = 4
continuation_align_style = "space"
dedent_closing_brackets = true
coalesce_brackets = true
column_limit = 1000
blank_lines_between_top_level_imports_and_variables = 2
